force-app/main/default/objects/mtr_CommandRunLog__c/mtr_CommandRunLog__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains details of commands executed per-phase.</description>
    <label>Command Run Log</label>
</CustomObject>