force-app/main/default/objects/mtr_CommandRunLog__c/fields/mtr_Command__c.field-meta.xml
<CustomField>
    <fullName>mtr_Command__c</fullName>
    <description>The command which was run</description>
    <label>Command</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>