force-app/main/default/objects/mtr_CommandRunLog__c/fields/mtr_Log__c.field-meta.xml
<CustomField>
    <fullName>mtr_Log__c</fullName>
    <description>Any relevant details related to the execution.</description>
    <inlineHelpText>Any relevant details related to the execution.</inlineHelpText>
    <label>Log</label>
    <type>TextArea</type>
</CustomField>