force-app/main/default/objects/mtr_CommandRunLog__c/fields/mtr_Phase__c.field-meta.xml
<CustomField>
    <fullName>mtr_Phase__c</fullName>
    <description>The phase for which the command was run.</description>
    <inlineHelpText>The phase for which the command was run.</inlineHelpText>
    <label>Phase</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>